# sdl3-opengl-learn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_cmake.bat  doxyfile  licence.txt
shaders/: general.vert  model_loading.frag  model_loading.vert
src/: app.cpp  app.hpp  camera.hpp  common.h  cube.cpp  cube.hpp  custom_geometry.cpp  custom_geometry.hpp  debug.cpp  debug.hpp  entity.hpp  gl_utils.cpp  gl_utils.hpp  helper.cpp  helper.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.hpp  node.cpp  node.hpp  perspective_camera.cpp  perspective_camera.hpp  renderer.hpp  scene.hpp  shader.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  vertex.hpp  window.cpp  window.hpp
src/TODO/: entity.hpp
